# templatepptx

./: .gitignore  LICENCE  README.md  pyproject.toml
src/: batch_processor.py  parentFactory.py  parent_factory.py  parent_processor.py  parentprocessor.py  pictureFactory.py  picture_factory.py  picture_processor.py  pictureprocessor.py  pptxProcessor.py  tableFactory.py  table_factory.py  table_processor.py  tableprocessor.py  template_pptx_options.py  templatepptx.py  test.py  textFactory.py  text_factory.py  text_processor.py  textprocessor.py
src/examplePresentations/: ExampleTables.pptx  ExampleTablesOutput.pptx
src/templatepptx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: pptx_test_helper.py  test_template_pptx.py
unitTests/: test_pptx.py
unitTests/testInputs/: UnitTesting.pptx
